--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,13 +10,18 @@ http {
   client_max_body_size 100m;
 
   upstream backend {
-    server backend:8000;
+    server localhost:8000;
   }
 
   server {
     listen 80;
     charset utf-8;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    ssl_certificate 	/etc/nginx/bundle.crt;
+    ssl_certificate_key		/etc/nginx/*.beardbrothersbetterbeardbalm.com.key;
 
+ 
     # backen urls
     location / {
       proxy_redirect off;
@@ -29,8 +34,8 @@ http {
     }
 
     # backend static
-    #location /static {
-     # alias /home/ubuntu/environment/docker_bro/backend/app/static;
-  #  }
+    location ~ ^/(static|staticfiles|images)/(.*)$ {
+      alias /$1/$2;
+    }
   }
 }
